- ‘Topology/Review Doc/TopologyQualifyingExamNotes.html’ / ‘Topology/Review Doc/TopologyQualifyingExamNotes.md’ - ‘Topology/Review Doc/TopologyQualifyingExamNotes.pdf’ / ‘Topology/Review Doc/TopologyQualifyingExamNotes.tex’ / ‘Topology/Review Doc/TopologyQualifyingExamNotes_stripped.md’ / ‘Topology/Review Doc/sections/292_UCSD_Summer 2003.md’ - ‘Topology/Review Doc/tex_tempfiles/TopologyQualifyingExamNotes.pdf’

--- a/Topology/Review Doc/TopologyQualifyingExamNotes.tex
+++ b/Topology/Review Doc/TopologyQualifyingExamNotes.tex
@@ -5292,7 +5292,7 @@ where \(\deg \Phi_2 = 4\).
 \hypertarget{section-8}{%
 \subsection{4}\label{section-8}}
 
-Compute the complement of a knotted solid torus in \(S^3\).
+Compute \(H_*\) of the complement of a knotted solid torus in \(S^3\).
 
 \begin{solution}
 
