/ ‘Real Analysis/Review Doc/sections/91_01_2018_Fall_Exam1.md’

--- a/Real Analysis/Review Doc/sections/91_01_2018_Fall_Exam1.md
+++ b/Real Analysis/Review Doc/sections/91_01_2018_Fall_Exam1.md
@@ -1,31 +1,36 @@
-# Midterm Exam 2 (November 2018)
+# Midterm Exam 1 (October 2018)
 
-## 1 (Integration by Parts)
+## Problem 1
 
-Let $f, g\in L^1([0, 1])$, define $F(x) = \int_0^x f$ and $G(x) = \int_0^x g$, and show
-\begin{align*}
-\int_0^1 F(x)g(x) \,dx = F(1)G(1) - \int_0^1 f(x) G(x) \, dx
-.\end{align*}
+Let $E \subseteq \RR^n$ be bounded.
+Prove the following are equivalent: 
 
-## 2
-Let $\phi\in L^1(\RR^n)$ such that $\int \phi = 1$ and define $\phi_t(x) = t^{-n}\phi(t\inv x)$.
+1. For any \( \epsilon>0 \) there exists and open set \( G \) and a closed set \( F \) such that 
+\[
+F \subseteq E \subseteq G && m(G\sm F) < \epsilon
+.\]
 
-Show that if $f$ is bounded and uniformly continuous then $f\ast \phi_t \converges{t\to 0} f$ uniformly.
+2. There exists a \( G_ \delta \) set $V$ and an \( F_ \sigma \) set $H$ such that 
+\[
+m(V\sm H) = 0
+.\]
 
-## 3
+## Problem 2
 
-Let $g\in L^\infty([0, 1])$.
+Let \( \ts{ f_k } _{k=1}^{\infty } \) be a sequence of extended real-valued Lebesgue measurable functions.
 
-a. Prove
-\begin{align*}
-\norm{g}_{L^p([0, 1])}  \converges{p\to\infty}\to \norm{g}_{L^\infty([0, 1])}
-.\end{align*}
+a. Prove that \( \sup_k f_k \) is a Lebesgue measurable function.
 
-b. Prove that the map
-\begin{align*}
-\Lambda_g: L^1([0, 1]) &\to \CC \\
-f &\mapsto \int_0^1 fg
-\end{align*}
-  defines an element of $L^1([0, 1])\dual$ with $\norm{\Lambda_g}_{L^1([0, 1])\dual}= \norm{g}_{L^\infty([0, 1])}$.
+b. Prove that if \( \lim_{k \to \infty } f_k(x) \) exists for every \( x \in \RR^n \) then \( \lim_{k\to \infty } f_k \) is also a measurable function.
 
-> Note: 4 is a repeat.
+
+## Problem 3
+
+### a
+
+Prove that if \( E \subseteq \RR^n \) is a Lebesgue measurable set, then for any \( h \in \RR \) the set
+\[
+E+h \da \ts{x + h \st x\in E }
+\]
+is also Lebesgue measurable and satisfies \( m(E + h) = m(E) \).
+
