/ ‘Real Analysis/Review Doc/sections/91_01_2018_Fall_Exam1.md’

--- a/Real Analysis/Review Doc/sections/91_01_2018_Fall_Exam1.md
+++ b/Real Analysis/Review Doc/sections/91_01_2018_Fall_Exam1.md
@@ -34,3 +34,16 @@ E+h \da \ts{x + h \st x\in E }
 \]
 is also Lebesgue measurable and satisfies \( m(E + h) = m(E) \).
 
+### b
+
+Prove that if $f$ is a non-negative measurable function on $\RR^n$ and $h\in \RR^n$ then the function
+\[
+\tau_h d(x) \da f(x-h)
+\]
+is a non-negative measurable function and
+\[
+\int f(x) \dx = \int f(x-h) \dx
+.\]
+
+
+
