/ ‘Real Analysis/Review Doc/sections/91_01_2018_Fall_Exam1.md’

--- a/Real Analysis/Review Doc/sections/91_01_2018_Fall_Exam1.md
+++ b/Real Analysis/Review Doc/sections/91_01_2018_Fall_Exam1.md
@@ -46,4 +46,19 @@ is a non-negative measurable function and
 .\]
 
 
+# Problem 4
+
+Let $f: \RR^n\to \RR$ be a Lebesgue measurable function.
+
+a. Prove that for all \( \alpha> 0 \) ,
+\[
+A_ \alpha  \da \ts{x\in \RR^n \st \abs{ f(x) } > \alpha} \implies m(A_ \alpha) \leq {1\over \alpha} \int \abs{f (x)} \dx
+.\]
+
+b. Prove that 
+\[
+\int \abs{ f(x) } \dx = 0 \iff f = 0 \text{ almost everywhere}
+.\]
+
+
 
