- ‘Real Analysis/Resources/2018 Exam1.pdf’ / ‘Real Analysis/Review Doc/sections/91_01_2018_Fall_Exam1.md’ / ‘Real Analysis/Review Doc/sections/91_01_2018_Fall_Exam2.md’

--- a/Real Analysis/Review Doc/sections/91_01_2018_Fall_Exam1.md
+++ b/Real Analysis/Review Doc/sections/91_01_2018_Fall_Exam1.md
@@ -46,7 +46,7 @@ is a non-negative measurable function and
 .\]
 
 
-# Problem 4
+## Problem 4
 
 Let $f: \RR^n\to \RR$ be a Lebesgue measurable function.
 
@@ -61,4 +61,12 @@ b. Prove that
 .\]
 
 
+## Problem 5
 
+Let \( \ts{ f_k }_{k=1}^{\infty } \subseteq L^2([0, 1]) \) be a sequence which *converges in $L^1$* to a function $f$.
+
+a. Prove that $f\in L^1([0, 1])$.
+
+b. Give an example illustrating that $f_k$ may not converge to $f$ almost everywhere.
+
+c. Prove that $\ts{f_k}$ must contain a subsequence that converges to $f$ almost everywhere.
