--- a/Real Analysis/Review Doc/sections/91_01_2018_Fall_Exam2.md
+++ b/Real Analysis/Review Doc/sections/91_01_2018_Fall_Exam2.md
@@ -2,30 +2,29 @@
 
 ## 1 (Integration by Parts)
 
-Let $f, g\in L^1([0, 1])$, define $F(x) = \int_0^x f$ and $G(x) = \int_0^x g$, and show
-\begin{align*}
+Let $f, g\in L^1([0, 1])$, define $F(x) = \int_0^x f(y)\dy$ and $G(x) = \int_0^x g(y)\dy$, and show
+\[
 \int_0^1 F(x)g(x) \,dx = F(1)G(1) - \int_0^1 f(x) G(x) \, dx
-.\end{align*}
+.\]
 
 ## 2
 Let $\phi\in L^1(\RR^n)$ such that $\int \phi = 1$ and define $\phi_t(x) = t^{-n}\phi(t\inv x)$.
-
-Show that if $f$ is bounded and uniformly continuous then $f\ast \phi_t \converges{t\to 0} f$ uniformly.
+Show that if $f$ is bounded and uniformly continuous then $f\ast \phi_t \converges{t\to 0}\to f$ uniformly.
 
 ## 3
 
 Let $g\in L^\infty([0, 1])$.
 
 a. Prove
-\begin{align*}
+\[
 \norm{g}_{L^p([0, 1])}  \converges{p\to\infty}\to \norm{g}_{L^\infty([0, 1])}
-.\end{align*}
+.\]
 
 b. Prove that the map
-\begin{align*}
+\[
 \Lambda_g: L^1([0, 1]) &\to \CC \\
 f &\mapsto \int_0^1 fg
-\end{align*}
+\]
   defines an element of $L^1([0, 1])\dual$ with $\norm{\Lambda_g}_{L^1([0, 1])\dual}= \norm{g}_{L^\infty([0, 1])}$.
 
 > Note: 4 is a repeat.
